--- a/src/templates/preview.html
+++ b/src/templates/preview.html
@@ -19,6 +19,9 @@
     <div rel="tooltip"
          data-placement="bottom"
          class="piskel-icon-onion preview-toggle-onion-skin"></div>
+    <div rel="tooltip"
+         data-placement="bottom"
+         class="piskel-icon-onion preview-toggle-bump"></div>
     <span id="display-fps" class="display-fps"></span>
     <input id="preview-fps" class="range-fps" type="range" min="0" max="24"/>
   </div>
